# kettu

./: .gitignore  .gitmodules  CONTRIB.md  Cargo.toml  DEBUGGER-TODO.md  README.md  ROADMAP.md  kettu.code-workspace  patch2.diff  rewrite.diff  session-ses_2972.md  test_hush.kettu  test_hush_fixed.kettu  test_match_ast_clone.rs
.github/workflows/: ci.yml  nightly.yml
crates/kettu-checker/: Cargo.toml  README.md
crates/kettu-checker/src/: lib.rs
crates/kettu-cli/: Cargo.toml  README.md  ROADMAP.md  build.rs
crates/kettu-cli/docs/: wasip3-support.md
crates/kettu-cli/docs/language-guide/: expressions.md  functions.md  index.md  resources.md  testing.md  types.md
crates/kettu-cli/editors/vscode/: .vscodeignore  LICENSE  README.md  debug-breakpoints.js  debug-values.js  extension.js  kettu-icon-theme.json  language-configuration.json  package-lock.json  package.json  wit-language-configuration.json
crates/kettu-cli/editors/vscode/preview/: kettu-preview.css  kettu-preview.js  wit-preview.css  wit-preview.js
crates/kettu-cli/editors/vscode/scripts/: prepare-bundle.js
crates/kettu-cli/editors/vscode/syntaxes/: kettu-markdown-injection.json  kettu.tmLanguage.json  wit-markdown-injection.json  wit.tmLanguage.json
crates/kettu-cli/editors/vscode/tests/: debug-breakpoint-tests.js  debug-manifest-tests.js  debug-values-tests.js  textmate-regex-tests.js
crates/kettu-cli/src/: dap.rs  docs.rs  doctest.rs  main.rs  mcp.rs
crates/kettu-cli/tests/: dap_integration.rs  integration.rs
crates/kettu-cli/tests/fixtures/: capture_record_debug.kettu  closure_debug.kettu  function_call_debug.kettu  nested_closure_debug.kettu  record_debug.kettu  resource_debug.kettu  result_debug.kettu  same_line_closure_debug.kettu
crates/kettu-codegen/: Cargo.toml  README.md
crates/kettu-codegen/src/: compiler.rs  compiler.rs.orig  component.rs  lib.rs  resolver.rs
crates/kettu-lsp/: Cargo.toml  README.md
crates/kettu-lsp/src/: lib.rs
crates/kettu-parser/: Cargo.toml  README.md  build.rs
crates/kettu-parser/examples/: README.md  async_test.kettu  callable_closure_test.kettu  hof_test.kettu  list_test.kettu  math.wasm  option_result_test.kettu  resource_test.kettu  string_test.kettu  trailing_closure_test.kettu  try_test.kettu  types.kettu  variant_test.kettu
crates/kettu-parser/examples/modules/: main.kettu
crates/kettu-parser/examples/modules/helper/: lib.kettu
crates/kettu-parser/src/: ast.rs  capture.rs  emitter.rs  lexer.rs  lib.rs
crates/kettu-parser/src/grammar/: convert.rs  mod.rs  tests.rs
crates/kettu-wasm/: Cargo.toml  README.md
crates/kettu-wasm/src/: lib.rs
docs/: concurrency.md  language-overview.md  lsp.md  simd.md  wasip3.md
docs/examples/: hello.md  index.md  math.md  resources.md
docs/language-guide/: closures.md  expressions.md  functions.md  gates.md  hello-world.md  index.md  lists.md  loops.md  match.md  packages.md  resources.md  strings.md  testing.md  types.md
editors/vscode/: package.json  tsconfig.json
editors/vscode/src/: extension.ts
examples/: README.md  assignment_test.kettu  async_callback_test.kettu  async_test.kettu  async_test.wasm  callable_closure_test.kettu  composition.kettu  contract_test.kettu  control.kettu  control.wasm  control_test.kettu  getting-started.kettu  getting-started.wasm  hello.kettu  hello.wasm  hof_test.kettu  if_expr_test.kettu  list_test.kettu  loop_test.kettu  match_test.kettu  math.kettu  math_test.kettu  negation_test.kettu  record_test.kettu  resource_test.kettu  resources.kettu  simd_test.kettu  string_interp_test.kettu  thread_test.kettu  try_test.kettu  versioned.kettu  while_test.kettu
examples/modules/helper/: lib.kettu
ideas/: contracts.md
