[package]
name = "kettu-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "kettu"
path = "src/main.rs"

[dependencies]
kettu-parser = { path = "../kettu-parser" }
kettu-checker = { path = "../kettu-checker" }
kettu-codegen = { path = "../kettu-codegen" }
kettu-lsp = { path = "../kettu-lsp" }
clap.workspace = true
tokio.workspace = true
serde_json.workspace = true
wasmtime = { version = "43.0.0", default-features = false, features = ["cranelift", "runtime", "std"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"
