[package]
name = "kettu-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
kettu-parser = { path = "../kettu-parser" }
kettu-checker = { path = "../kettu-checker" }
gimli = "0.33.0"
wasm-encoder = { workspace = true }
wit-component = { workspace = true }
wit-parser = { workspace = true }
wasmparser = { workspace = true }

[lib]
doctest = false
